# Analytics

./: .gitignore  Makefile  README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  RUNBOOKS.md  VALIDATION.md
examples/: README.md  run-all.sh  send_events.py
examples/demo-app/: index.html
examples/demo-app/js/: analytics.js
infrastructure/: README.md  docker-compose.yml  init-clickhouse.sh
infrastructure/init-pg/: 01_schema.sql
schemas/: README.md
schemas/ddl/: clickhouse_events.sql  clickhouse_events_migrate_extracted_props.sql
schemas/events/: capture-batch.json  capture-event.json
schemas/openapi/: capture-api.yaml  query-api.yaml
sdks/python/: README.md  pyproject.toml
sdks/python/analytics/: __init__.py  client.py
sdks/web/: README.md
services/auth-api/: README.md  requirements.txt
services/auth-api/app/: auth_utils.py  config.py  db.py  logging_config.py  main.py  metrics.py  models.py
services/capture-api/: README.md  requirements.txt
services/capture-api/app/: __init__.py  auth_client.py  config.py  kafka_producer.py  logging_config.py  main.py  metrics.py  models.py  rate_limit.py
services/consumer/: README.md  requirements.txt
services/consumer/app/: clickhouse_client.py  config.py  consumer.py  dlq.py  logging_config.py  metrics.py
services/dashboard/: README.md  package-lock.json  package.json
services/dashboard/src/: App.jsx  Connect.jsx  Dashboard.jsx  api.js  (+1 more)
services/query-api/: README.md  requirements.txt
tests/: README.md  requirements-test.txt  stress-capture.js  stress-query.js
tests/integration/: test_pipeline.py
(+11 files in other folders)
