[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-sdk"
version = "1.0.0"
description = "Server-side analytics SDK"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["analytics*"]
